tests/invalid/dict_compare_type_mismatch/main.py
def run_case() -> None:
    a: dict[int, int] = {1: 1}
    b: dict[int, float] = {1: 1.0}
    bad: bool = a == b


if __name__ == "__main__":
    run_case()
